--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="plantilla.css">
 </head>
 <input>
-    <header>Hola Mundo</header>
+    <header>Hola Mundo NUevo</header>
     <p>ya está</p>
     <div class="caja"></div>
     <div class="caja"></div>
