--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <title>JACERVI</title>
 <h1>Página de José Antonio Cerviño</h1>
 <body>
-    
+    <script>
+        let newDiv = document.createElement("div");
+            newDiv.innerText = "Soy un div nuevo";
+            document.body.appendChild(newDiv);
+    </script>
 </body>
 </html>
