--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <h1>Página de José Antonio Cerviño</h1>
 <body>
     <script>
+        // Crear y Eliminar Elementos del DOM
+        // - Crear elementos
         let newDiv = document.createElement("div");
-            newDiv.innerText = "Soy un div nuevo";
-            document.body.appendChild(newDiv);
+            newDiv.innerText = "LIBROS";
+            //document.body.appendChild(newDiv);
+            
     </script>
+    <ul>
+        <li>Primer libro</li>
+    </ul>
 </body>
 </html>
