--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         // - Crear elementos
         let newDiv = document.createElement("div");
             newDiv.innerText = "LIBROS";
-            //document.body.appendChild(newDiv);
+            document.body.appendChild(newDiv);
             
     </script>
     <ul>
