--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             
     </script>
     <ul>
-        <li>Primer libro</li>
+        <li>El gran libro de HTML5, CSS3 y JavaScript Ed 3</li>
     </ul>
 </body>
 </html>
