--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </script>
     <ul>
         <li>El gran libro de HTML5, CSS3 y JavaScript Ed 3</li>
+        <li>Eloquent_JavaScript</li>
     </ul>
 </body>
 </html>
