--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             document.body.appendChild(newDiv);
             
     </script>
-    <ul>
+    <ul id="ListaLibros">
         <li>El gran libro de HTML5, CSS3 y JavaScript Ed 3</li>
         <li>Eloquent_JavaScript</li>
     </ul>
