--- a/index.html
+++ b/index.html
@@ -15,11 +15,17 @@
         let newDiv = document.createElement("div");
             newDiv.innerText = "LIBROS";
             document.body.appendChild(newDiv);
+    
+        let listItems = document.querySelectorAll("ul.list > li");
+        console.log(listItems)
             
     </script>
+    <img src="vite.svg" alt="Imagen original">
     <ul id="ListaLibros">
         <li>El gran libro de HTML5, CSS3 y JavaScript Ed 3</li>
         <li>Eloquent_JavaScript</li>
+        <li>javascript-handbook</li>
+        <li>nodejs_web_development_fifth_edition</li>
     </ul>
 </body>
 </html>
