--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <title>JACERVI</title>
 <h1>Página de José Antonio Cerviño</h1>
+<img src="EscudoCervi.png" alt="Nada" width="48" height="58">
 <body>
     <script>
         // Crear y Eliminar Elementos del DOM
@@ -27,5 +28,6 @@
         <li>javascript-handbook</li>
         <li>nodejs_web_development_fifth_edition</li>
     </ul>
+    
 </body>
 </html>
