--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
     <link rel="stylesheet" href="styles.css">
 </head>
 <title>JACERVI</title>
@@ -28,6 +29,7 @@
         <li>javascript-handbook</li>
         <li>nodejs_web_development_fifth_edition</li>
     </ul>
-    
+
 </body>
+
 </html>
