--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
 <h1>Página de José Antonio Cerviño</h1>
 <img src="EscudoCervi.png" alt="Nada" width="48" height="58">
 <body>
+    <video src="f4.mp4" autoplay="true" muted="true" loop="true" poster=""></video>
     <script>
         // Crear y Eliminar Elementos del DOM
         // - Crear elementos
         let newDiv = document.createElement("div");
             newDiv.innerText = "LIBROS";
             document.body.appendChild(newDiv);
-    
+
         let listItems = document.querySelectorAll("ul.list > li");
-        console.log(listItems)
+            console.log(listItems)
             
     </script>
     <img src="vite.svg" alt="Imagen original">
