--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         //let0 newDiv = document.createElement("div");
         //   newDiv.innerText = "LIBROS JavaScript";
         //    document.body.appendChild(newDiv);
-        let boton = document.querySelect("form.action  input[name='seleccionar']")
+        let boton = document.getElementById("searchInput")
         console.log("input pulsado")
         boton.addEventListener("click", seleccion)
         
